<resources>
    <string name="app_name">API Demo</string>
    <string name="main_schoose_option">Escolha uma opção:</string>
    <string name="payment_title">Pagamento</string>
    <string name="broadcast_error_title">Broadcast de Erros</string>
    <string name="broadcast_error_enable">Habilitar Broadcast de Erros</string>
    <string name="openPaymentBtn">Fazer Pagamento</string>
    <string name="bindBtn">Bind</string>
    <string name="unbindBtn">Unbind</string>
    <string name="doPaymentBtn">Pagar V1</string>
    <string name="doPaymentBtnv2">Pagar V2</string>
    <string name="closeBatchButton">Fechar lote</string>
    <string name="valueEdtHint">Valor</string>
    <string name="softwareVersionHint">Versão do software</string>
    <string name="addValueEdtHint">Valor Adicional</string>
    <string name="addValueTypeHint">Tipo do Valor Adicional</string>
    <string name="productShortNameHint">Abreviação do Produto</string>
    <string name="accTypeHint">Tipo da conta</string>
    <string name="settlementRequest" translatable="false">Settlement Request</string>
    <string name="reprintRequest">Reprint Request</string>
    <string name="planIdHint">Plan ID</string>
    <string name="secretTokenHint">Token Secreto</string>
    <string name="installmentsEdtHint">Parcelas</string>
    <string name="applicationIdHint">Id da aplicação</string>
    <string name="ticketNumberHint">Ticket number</string>
    <string name="dayHint">Dia</string>
    <string name="monthHint">Mês</string>
    <string name="yearHint">Ano</string>
    <string name="hoursHint">Horas</string>
    <string name="minutesHint">Minutos</string>
    <string name="secondsHint">Segundos</string>
    <string name="appTransactionIdEdtHint">Identificador da Transação para Aplicação</string>
    <string name="appEmailToken">Email para criar token do cartão</string>
    <string name="credPayTypeChb">Crédito a Vista</string>
    <string name="credMercPayTypeChb">Parcelado S/Juros</string>
    <string name="debPayTypeChb">Débito</string>
    <string name="paymentTypesAllows">Tipos de Pagamento</string>
    <string name="paymentTypesAcquirer">Tipos de Pagamento da </string>
    <string name="credAdmPayTypeChb">Parcelado C/Juros</string>
    <string name="voucher">Voucher</string>
    <string name="prePayTypeChb">Pré-autorização</string>
    <string name="confirmPreMercPayTypeChb">Confirmação de Pré-autorização</string>
    <string name="confirmBtn">Confirmar Pagamento</string>
    <string name="cancelBtn">Desfazer Pagamento</string>
    <string name="reverseBtn">Estornar Pagamento</string>
    <string name="confirm_payment_title">Confirmação de Pagamento</string>
    <string name="paymentTransactionIdEdtHint">Identificador do Pagamento</string>
    <string name="doConfirmPaymentBtn">Confirmar</string>
    <string name="cancel_payment_title">Desfazimento de Pagamento</string>
    <string name="doCancelPaymentBtn">Desfazer</string>
    <string name="reverse_payment_title">Estorno de Pagamento</string>
    <string name="doReversePaymentBtn">Estornar</string>
    <string name="cancel_reverse_payment_title">Desfazimento de Estorno</string>
    <string name="reverseTransactionIdEdtHint">Identificador do Estorno</string>
    <string name="cancelReverseBtn">Desfazer Estorno</string>
    <string name="responseDataTV">Dados da Resposta</string>
    <string name="clientViaTV">Via do Cliente</string>
    <string name="merchantViaTV">Via do Estabelecimento</string>
    <string name="result_title">Resultado</string>
    <string name="requieredFieldError">Campo obrigatório!</string>
    <string name="requieredFieldDateError">Data/hora inválida!</string>
    <string name="chb_show_receipt_view">Mostrar Tela de Comprovante</string>
    <string name="cb_allow_benefit">Agregar benefícios</string>
    <string name="themeEdtHint">Tema da Aplicação</string>
    <string name="packageNameEdtHint">PackageName da Aplicação</string>
    <string name="doSetThemeBtn">Definir Tema</string>
    <string name="doSetMainAppBtn">Definir aplicação principal</string>
    <string name="reverse_without_id_title">Anulação/devolução sem paymentId</string>
    <string name="solvePendQRCodetitle">Pendências de QR CODE</string>
    <string name="operationMethodHint">Método de operação</string>
    <string name="doReversePayment">Anulação/devolução sem paymentId</string>
    <string name="paymentsFilter_mainBtn">Listar Pagamentos</string>
    <string name="paymentsFilter_title">Filtro </string>
    <string name="paymentsFilter_filter">Filtrar</string>
    <string name="paymentsFilter_batch_pend">Lote pendente</string>
    <string name="paymentsFilter_sale">Venda</string>
    <string name="paymentsFilter_unreferenced_devolution">Devolução não referenciada</string>
    <string name="paymentsFilter_type_all">Todas</string>
    <string name="paymentsFilter_last_batch">Últ. lote fechado</string>
    <string name="paymentsFilter_last_approved">Últ. transação aprovada</string>
    <string name="paymentsFilter_statusPending">Pendente</string>
    <string name="paymentsFilter_statusConfirmed">Confirmado</string>
    <string name="paymentsFilter_statusRefunded">Devolvido</string>
    <string name="paymentsFilter_statusCancelled">Cancelado</string>
    <string name="paymentsFilter_statusReversed">Estornado</string>
    <string name="paymentsFilter_field_status">Status de Pagamento</string>
    <string name="paymentsFilter_field_TrxType">Tipo de Transação</string>
    <string name="paymentsFilter_field_startDate">Data Inicial</string>
    <string name="paymentsFilter_field_finishDate">Data Final</string>
    <string name="paymentsFilter_field_minValue">Valor Minimo</string>
    <string name="paymentsFilter_field_maxValue">Valor Máximo</string>
    <string name="paymentsFilter_field_4digits">Último 4 digitos do cartão</string>
    <string name="paymentsFilter_field_ticket_number">N° do ticket</string>
    <string name="paymentsFilter_field_batch_number">N° do lote</string>
    <string name="paymentsFilter_field_acquirer_response_code">Código de resposta da adquirente</string>
    <string name="setThemeBtn">Definir Tema da Aplicação</string>
    <string name="setSupervisorPasswordBtn">Enviar senha do supervisor</string>
    <string name="solvePendenciesBtn">Resolver Pendências</string>
    <string name="solvePendenciesQRCode">Resolver pendencias de QR CODE</string>
    <string name="solvePendenciesQRCodeList">Resolver pendencias de QR CODE (Lista)</string>
    <string name="setMainApp">Definir aplicação principal</string>
    <string name="paymentEndToEnd">Fazer Pagamento de ponta a ponta</string>
    <string name="paymentsList_title"> Lista de Pagamentos </string>
    <string name="paymentsList_bin_format">BIN **** %s</string>
    <string name="paymentsList_currency_format"> R$ %s </string>
    <string name="PaymentsList_notFoundPaymentsConfirm">Não Existe Pagamentos para Confirmar</string>
    <string name="PaymentsList_no_pending_reversal">Nenhum estorno pendente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closeBatch">Fechar Lote</string>
    <string name="settlement_result_title">Resultado do fechamento de lote</string>
    <string name="settlement_batch_number">Número do lote</string>
    <string name="settlement_acquirer_response_code">Cod. de Resposta</string>
    <string name="settlement_terminal_id">Terminal Id</string>
    <string name="settlement_message">Mensagem</string>
    <string name="settlement_date">Data e hora</string>
    <string name="settlement_dialog_print_merchant_receipt">Deseja imprimir a via do lojista ao fechar o lote?</string>
    <string name="new_batch_open">Novo lote aberto</string>
    <string name="openBatch">Abrir Lote com Numeração Específica</string>
    <string name="btn_openBatch">Abrir Lote</string>
    <string name="result_activity_payment_id">Ident.do Pagamento</string>
    <string name="result_activity_copied_payment_id">O Id de pagamento foi copiado!</string>
    <string name="result_activity_acquirer_id">Ident. para a Adquirente</string>
    <string name="result_activity_auth">Número de Autorização</string>
    <string name="result_activity_resp_code">Código de Resposta</string>
    <string name="result_activity_acquirer_datetime">Data/hora Adquirente</string>
    <string name="result_activity_acquirer_additional_msg">Mensagem Adicional do Adquirente</string>
    <string name="result_activity_product_short_name">Abreviação do Produto</string>
    <string name="result_activity_settlement_id">Número do Lote</string>
    <string name="result_activity_terminal_nsu">NSU Terminal</string>
    <string name="result_activity_cancelable">Pode ser desfeito</string>
    <string name="result_activity_holder_name">Nome do Portador</string>
    <string name="result_activity_card">Cartão</string>
    <string name="result_activity_terminal_id">Terminal Id</string>
    <string name="result_activity_ticket_number">Número do Ticket</string>
    <string name="result_activity_status">Status</string>
    <string name="result_activity_value">Valor</string>
    <string name="result_activity_payment_type">Tipo de Pagamento</string>
    <string name="result_activity_acquirer">Adquirente</string>
    <string name="result_activity_acquirer_name">Nome do Adquirente</string>
    <string name="result_activity_terminal_datetime">Data/hora Terminal</string>
    <string name="result_activity_capture_type">Forma de Captura</string>
    <string name="result_activity_installments">Parcelas</string>
    <string name="result_activity_currency_code">Código da Moeda</string>
    <string name="result_activity_dni">DNI</string>
    <string name="result_activity_notes">Notes</string>
    <string name="result_activity_additional_value_type">Tipo do Valor Adicional</string>
    <string name="result_activity_additional_value">Valor Adicional</string>
    <string name="result_activity_additional_account_type">Tipo da Conta</string>
    <string name="result_activity_additional_plan_id">Plan ID</string>
    <string name="result_activity_card_token">Token do Cartão</string>
    <string name="discountedValue">Desconto</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="connected">Conectado</string>
    <string name="reconnect">Reconectar</string>
    <string name="disconnected">Desconectado</string>
    <string name="attention">Atenção!</string>
    <string name="continueBtn">Continuar</string>
    <string name="method">Método</string>
    <string name="detail">Detalhe</string>
    <string name="message">Mensagem</string>
    <string name="refundRequest"> Solicitação de Reembolso</string>
    <string name="doRefund">Devolução não referenciada</string>
    <string name="printMerchantReceiptHint">Imprimir via do lojista</string>
    <string name="printCustomerReceiptHint">Imprimir via do cliente</string>
    <string name="previewMerchantReceiptHint">Visualizar tela de comprovante do lojista</string>
    <string name="previewCustomerReceiptHint">Visualizar tela de comprovante do cliente</string>
    <string name="print_api">Primeira impressão (printReceipt)</string>
    <string name="password_supervisor_label">Senha do supervisor: </string>
    <string name="set_Supervisor_Password_label">Defina a senha do supervisor </string>
    <string name="applicationInfo_label">ApplicationInfo: </string>
    <string name="set_SoftwareVersion_label">Defina SoftwareVersion </string>
    <string name="Credencials_label">Credencials: </string>
    <string name="set_ApplicationId_label">Defina ApplicationId </string>
    <string name="set_SecretToken_label">Defina SecretToken </string>
    <string name="checkbox_MD5_label">Enviar senha em MD5 </string>
    <string name="checkbox_password_null_label">Enviar senha NULL/vazio </string>
    <string name="checkbox_send_supervisor_password_label">Enviar a senha do supervisor </string>
</resources>