<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.phoebus.payments.demo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_schoose_option" />
    <Button
        android:id="@+id/openPaymentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openPaymentActivity"
        android:text="@string/openPaymentBtn"/>
    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="confirm"
        android:text="@string/confirmBtn"/>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/cancelBtn"/>
    <Button
        android:id="@+id/reverseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reverse"
        android:text="@string/reverseBtn"/>
    <Button
        android:id="@+id/cancelReverseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelReverse"
        android:text="@string/cancelReverseBtn"/>

    <Button
        android:id="@+id/listBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listPayments"
        android:text="@string/paymentsFilter_mainBtn"/>

    <Button
        android:id="@+id/setThemeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setTheme"
        android:text="@string/setThemeBtn" />

</LinearLayout>
