<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupervisorPasswordValidateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password_supervisor_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/setSupervisorPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/set_Supervisor_Password_label"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/applicationInfo_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/setSoftwareVersionEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/set_SoftwareVersion_label"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Credencials_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/setApplicationIdEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/set_ApplicationId_label"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/setSecretTokenEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/set_SecretToken_label"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/MD5Check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_MD5_label" />

        <CheckBox
            android:id="@+id/sendPasswordNullCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_password_null_label" />


        <Button
            android:id="@+id/reprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="validatePasswordButton"
            android:text="@string/checkbox_send_supervisor_password_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>