<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReprintActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/paymentTransactionIdEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/paymentTransactionIdEdtHint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/chbReceiptMerchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printMerchantReceiptHint" />

        <CheckBox
            android:id="@+id/chbReceiptCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printCustomerReceiptHint" />

        <CheckBox
            android:id="@+id/previewReceiptMerchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previewMerchantReceiptHint" />

        <CheckBox
            android:id="@+id/previewReceiptCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/previewCustomerReceiptHint" />


        <Button
            android:id="@+id/reprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="printReceipt"
            android:text="@string/print_api" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>