<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RefundActivity">

    <LinearLayout
        android:id="@+id/activity_payment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="br.com.phoebus.payments.demo.PaymentActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/refundRequest"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="180dp"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/refundValue"
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:hint="@string/valueEdtHint"
                    android:inputType="numberDecimal"
                    android:maxLength="12" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productShortNameHint" />

            <Spinner
                android:id="@+id/productShortNameRefund"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/productShortNameHint"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/showMerchantReceiptView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printMerchantReceiptHint" />

        <CheckBox
            android:id="@+id/showCustomerReceiptView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/printCustomerReceiptHint" />

        <Button
            android:id="@+id/closeBatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doRefund"
            android:text="@string/doRefund" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>