<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_payment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="br.com.phoebus.payments.demo.PaymentActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/valueEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789,"
                android:hint="@string/valueEdtHint"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/installmentsEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/installmentsEdtHint"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/appTransactionIdEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appTransactionIdEdtHint"
                android:inputType="textShortMessage" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appEmailToken"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/chb_showReceiptView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chb_show_receipt_view"
            android:layout_marginBottom="50dp"/>


        <Button
            android:id="@+id/doPaymentBtnv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doPaymentV2"
            android:text="@string/doPaymentBtnv2" />

    </LinearLayout>
</ScrollView>