<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.phoebus.payments.demo.ReversePaymentActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/paymentTransactionIdEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="@string/paymentTransactionIdEdtHint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/valueEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valueEdtHint"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/appTransactionIdEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="@string/appTransactionIdEdtHint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/doPaymentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doReversePayment"
        android:text="@string/doReversePaymentBtn"/>

</LinearLayout>
